[package]
name = "pages"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FractalFir/pages"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
bencher = "0.1.5"
[[bench]]
name = "alloc_cmp"
harness = false
