[package]
name = "pages"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FractalFir/pages"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9",features = ["memoryapi","errhandlingapi"]}
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "alloc_cmp"
harness = false
[features]
deafault = ["deny_xw"]
deny_xw = []
allow_exec = []
[profile.bench]
#debug = true

