[package]
name = "memory_pages"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FractalFir/memory_pages"
description = "`memory_pages` provides a cross-platform memory management API which allows for acquiring memory pages from the kernel and setting permissions on them."
categories = ["memory-management","data-structures"]
keywords = ["memory","memory_management","pages","vec","allocator"]
authors = ["FractalFir <fractalfirdev@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9",features = ["memoryapi","errhandlingapi"]}
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "alloc_cmp"
harness = false
[features]
deafault = ["deny_xw"]
deny_xw = []
allow_exec = []
[profile.bench]
#debug = true

